latex2mmlc/src/snapshots/latex2mmlc__lexer__tests__assigment_with_space.snap
---
source: latex2mmlc/src/lexer.rs
expression: x = 3.14
---
0: Letter('x')
2: Operator(Op('='))
4: Number("3.14")
