latex2mmlc/src/snapshots/latex2mmlc__lexer__tests__number_with_dot.snap
---
source: latex2mmlc/src/lexer.rs
expression: "3.14"
---
0: Number(Three)
1: Letter('.')
2: Number(One)
3: Number(Four)
