latex2mmlc/src/snapshots/latex2mmlc__lexer__tests__number_with_dot_at_end.snap
---
source: latex2mmlc/src/lexer.rs
expression: 3.14.
---
0: Number(Three)
1: Letter('.')
2: Number(One)
3: Number(Four)
4: Letter('.')
