latex2mmlc/src/snapshots/latex2mmlc__lexer__tests__number_with_two_inner_dots.snap
---
source: latex2mmlc/src/lexer.rs
expression: 3..14
---
0: Number(Three)
1: Letter('.')
2: Letter('.')
3: Number(One)
4: Number(Four)
