latex2mmlc/src/snapshots/latex2mmlc__lexer__tests__simple_expression.snap
---
source: latex2mmlc/src/lexer.rs
expression: x+y
---
0: Letter('x')
1: BinaryOp(Bin('+'))
2: Letter('y')
