latex2mmlc/src/snapshots/latex2mmlc__lexer__tests__space_in_text.snap
---
source: latex2mmlc/src/lexer.rs
expression: "  x   y z"
---
(text mode)
1: Whitespace
2: Letter('x')
5: Whitespace
6: Letter('y')
7: Whitespace
8: Letter('z')
