latex2mmlc/src/snapshots/latex2mmlc__lexer__tests__two_lower_case_greek.snap
---
source: latex2mmlc/src/lexer.rs
expression: "\\alpha\\beta"
---
0: Letter('α')
6: Letter('β')
